config static files

--- a/refugio/templates/mascota/index.html
+++ b/refugio/templates/mascota/index.html
@@ -1,13 +1,9 @@
 {% extends 'base/base.html' %}
 
 {% block title %}
-App Mascota
-{% endblock %}
-
-{% block header %}
-<h5>Este es el header del index de la app mascota</h5>
+Mascota
 {% endblock %}
 
 {% block content %}
-<h6>Soy el contenido de mascota</h6>
+<h1>Contenido de la aplicación mascota</h1>
 {% endblock %}
