--- a/refugio/templates/mascota/mascota_list.html
+++ b/refugio/templates/mascota/mascota_list.html
@@ -14,8 +14,8 @@
         </tr>
     </thead>
     <tbody>
-        {% if mascotas %}
-            {% for mascota in mascotas %}
+        {% if object_list %}
+            {% for mascota in object_list %}
             <tr>
                 <td>{{ mascota.id }}</td>
                 <td>{{ mascota.nombre }}</td>
