--- a/refugio/templates/mascota/mascota_delete.html
+++ b/refugio/templates/mascota/mascota_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    <h3>¿Desea eliminar el registro de {{  mascota.nombre }}?</h3>
+    <h3>¿Desea eliminar el registro de {{  object.nombre }}?</h3>
     <button class="btn bg-danger">Sí, eliminar</button>
     <a class="btn btn-default" href="{% url 'mascota_list' %}">Cancelar</a>
 </form>
