update and delete solicitudes

--- a/refugio/templates/adopcion/solicitud_list.html
+++ b/refugio/templates/adopcion/solicitud_list.html
@@ -20,8 +20,8 @@
                 <td>{{ solicitud.numero_mascotas }}</td>
                 <td>{{ solicitud.razones }}</td>
                 <td>
-                    <a class="btn btn-primary" href="#">Editar</a>
-                    <a class="btn btn-danger" href="#">Eliminar</a>
+                    <a class="btn btn-primary" href="{% url 'solicitud_editar' solicitud.id %}">Editar</a>
+                    <a class="btn btn-danger" href="{% url 'solicitud_eliminar' solicitud.id %}">Eliminar</a>
                 </td>
             </tr>
             {% endfor %}
