--- a/refugio/templates/index.html
+++ b/refugio/templates/index.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
-                <a href="#">Olvidé mi contraseña</a>
+                <a href="{% url 'password_reset' %}">Olvidé mi contraseña</a>
                 <input type="submit" class="btn btn-primary" value="Ingresar">
             </div>
         </div>
